web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-parameter2/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,20)
1|a = async function(await) {}
 |                  ^
